fix: Align items to top when filter is longer than content
This prevents cards from stretching, but keeps them stretching within their own rows

--- a/app/frontend/scss/elements/_filter-columns.scss
+++ b/app/frontend/scss/elements/_filter-columns.scss
@@ -25,3 +25,7 @@
     background: var(--bg-standout);
   }
 }
+
+.filter-columns__content {
+  margin-bottom: auto;
+}
